--- a/index.html
+++ b/index.html
@@ -1,97 +1,117 @@
-<div class="center">
-<p><span><strong>Pupipat Singkhorn</strong></span><br />
-693/120, Indy Condo, Itsaraphap 31 Road  Bangkok, 10600<br />
-pupipat.sk@gmail.com  082 642 9767  <a
-href="www.linkedin.com/in/pupipatsk"> LinkedIn.com/pupipatsk</a>  <a
-href="https://github.com/pupipatsk"> Github.com/pupipatsk</a></p>
-</div>
-<p><strong>EDUCATION</strong></p>
-<hr />
-<p><strong>Chulalongkorn University</strong> 2022 - Present</p>
-<p>Bachelor of Engineering - Computer Engineering Major. GPAX:
-3.53<br />
-Relevant Coursework: Pattern Recognition, Algorithm Design, Data
-Structures, Programming Methodology</p>
-<p><strong>Triam Udom Suksa School</strong> 2019 - 2022<br />
-<em>Science-Mathematics Major. GPAX: 3.85</em></p>
-<ul>
-<li><p><em>Thailand Physics Olympiad (TPhO)</em> - 19th TPhO: Bronze
-Medal, 18th TPhO: Participated</p></li>
-<li><p><em>Triam Udom Photo Club (Staff and Member)</em> - Captured
-photos at various school events.</p></li>
-</ul>
-<p><strong>WORK EXPERIENCE</strong></p>
-<hr />
-<p><strong>Data Scientist Intern</strong> - Kiatnakin Phatra Bank June
-2024 - July 2024</p>
-<ul>
-<li><p><em>Used Car Price Forecasting</em></p>
-<ul>
-<li><p>Developed an ensemble machine learning model to predict used car
-prices, aiding informed automotive loan decisions.</p></li>
-<li><p>Conducted comprehensive data collection and cleaning, integrating
-car-specific, macro-, and micro-economic factors.</p></li>
-<li><p>Utilized time-series cluster analysis and Bayesian optimization
-techniques.</p></li>
-</ul></li>
-<li><p><em>Loss On Sale Forecasting</em></p>
-<ul>
-<li><p>Created a model to predict loss on sale for Non-Performing Loans
-(NPLs), reducing uncertainty in credit cost estimation.</p></li>
-<li><p>Utilized credit score, personal data, and credit risk factors to
-improve model accuracy.</p></li>
-<li><p>Applied coarse classing, binning-, and memory-optimization
-techniques to enhance model performance and efficiency.</p></li>
-</ul></li>
-</ul>
-<p><strong>Tutor</strong> - Teach Physics &amp; Mathematics 2022 -
-Present<br />
-Provided lessons for Physics Olympiad camp, university admissions, and
-high school preparation.</p>
-<p><strong>Photographer</strong> - Portfolio:  <a
-href="https://www.instagram.com/pupick.sk">instagram.com/pupick.sk</a>
-2019 - Present<br />
-Captured photos at events and private photo sessions.</p>
-<p><strong>EXTRACURRICULAR ACTIVITIES &amp; ACHIEVEMENT</strong></p>
-<hr />
-<p><strong>Aihack Thailand 2023 - Ai Hackathon</strong> December
-2023</p>
-<ul>
-<li><p>Created a credit risk model using a machine learning approach to
-forecast individuals who are likely to default.</p></li>
-<li><p>Performed data analysis, data pre-processing, and feature
-engineering using linear and tree-based models.</p></li>
-<li><p>Awarded 1st Prize Winner &amp; AUC Prize Winner.</p></li>
-</ul>
-<p><strong>Stock Return Forecasting with Portfolio Optimization
-Project</strong> April-May 2024<br />
-<span>Pattern Recognition 2024 Class Final Project</span></p>
-<ul>
-<li><p>Developed an Alpha Factor Model for stock return forecasting
-using Classical ML and LSTM networks.</p></li>
-<li><p>Designed and backtested quantitative trading strategies.</p></li>
-<li><p>Implemented Portfolio Optimization techniques within trading
-strategies.</p></li>
-</ul>
-<p><strong>Google Data Analytics Professional Certificate</strong> July
-2023</p>
-<p><strong>Participated in Business Case Competition</strong> 2023</p>
-<ul>
-<li><p><em>Hult Prize at Chulalongkorn</em> - Developed a social
-enterprise Idea aligned with the UN SDGs.</p></li>
-<li><p><em>Chulalongkorn Case Discovery x Ascend Money</em> - Formulated
-a competitive strategy for the TrueMoney financial services
-application.</p></li>
-</ul>
-<p><strong>MISCELLANEOUS</strong></p>
-<hr />
-<p><strong>Technical Skills</strong><br />
-Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTex,
-Markdown<br />
-Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib,
-Seaborn<br />
-Applications: Excel, Tableau, Power BI, Adobe Photoshop &amp; Lightroom,
-Git, GitHub</p>
-<p><strong>Language:</strong> Thai (Native), English</p>
-<p><strong>Interests:</strong> Business, Economics, Politics, Books,
-History, Philosophy</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pupipat Singkhorn - Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        .center {
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        hr {
+            border: 1px solid #ccc;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="center">
+            <p><strong>Pupipat Singkhorn</strong></p>
+            <p>693/120, Indy Condo, Itsaraphap 31 Road, Bangkok, 10600</p>
+            <p>Email: <a href="mailto:pupipat.sk@gmail.com">pupipat.sk@gmail.com</a></p>
+            <p>Phone: 082 642 9767</p>
+            <p>
+                <a href="https://www.linkedin.com/in/pupipatsk" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/pupipatsk" target="_blank">GitHub</a>
+            </p>
+        </div>
+        <p><strong>EDUCATION</strong></p>
+        <hr />
+        <p><strong>Chulalongkorn University</strong> 2022 - Present</p>
+        <p>Bachelor of Engineering - Computer Engineering Major. GPAX: 3.53</p>
+        <p>Relevant Coursework: Pattern Recognition, Algorithm Design, Data Structures, Programming Methodology</p>
+        <p><strong>Triam Udom Suksa School</strong> 2019 - 2022</p>
+        <p>Science-Mathematics Major. GPAX: 3.85</p>
+        <ul>
+            <li>Thailand Physics Olympiad (TPhO) - 19th TPhO: Bronze Medal, 18th TPhO: Participated</li>
+            <li>Triam Udom Photo Club (Staff and Member) - Captured photos at various school events.</li>
+        </ul>
+        <p><strong>WORK EXPERIENCE</strong></p>
+        <hr />
+        <p><strong>Data Scientist Intern</strong> - Kiatnakin Phatra Bank June 2024 - July 2024</p>
+        <ul>
+            <li>Used Car Price Forecasting
+                <ul>
+                    <li>Developed an ensemble machine learning model to predict used car prices, aiding informed automotive loan decisions.</li>
+                    <li>Conducted comprehensive data collection and cleaning, integrating car-specific, macro-, and micro-economic factors.</li>
+                    <li>Utilized time-series cluster analysis and Bayesian optimization techniques.</li>
+                </ul>
+            </li>
+            <li>Loss On Sale Forecasting
+                <ul>
+                    <li>Created a model to predict loss on sale for Non-Performing Loans (NPLs), reducing uncertainty in credit cost estimation.</li>
+                    <li>Utilized credit score, personal data, and credit risk factors to improve model accuracy.</li>
+                    <li>Applied coarse classing, binning-, and memory-optimization techniques to enhance model performance and efficiency.</li>
+                </ul>
+            </li>
+        </ul>
+        <p><strong>Tutor</strong> - Teach Physics & Mathematics 2022 - Present</p>
+        <p>Provided lessons for Physics Olympiad camp, university admissions, and high school preparation.</p>
+        <p><strong>Photographer</strong> - Portfolio: <a href="https://www.instagram.com/pupick.sk" target="_blank">instagram.com/pupick.sk</a> 2019 - Present</p>
+        <p>Captured photos at events and private photo sessions.</p>
+        <p><strong>EXTRACURRICULAR ACTIVITIES & ACHIEVEMENT</strong></p>
+        <hr />
+        <p><strong>Aihack Thailand 2023 - Ai Hackathon</strong> December 2023</p>
+        <ul>
+            <li>Created a credit risk model using a machine learning approach to forecast individuals who are likely to default.</li>
+            <li>Performed data analysis, data pre-processing, and feature engineering using linear and tree-based models.</li>
+            <li>Awarded 1st Prize Winner & AUC Prize Winner.</li>
+        </ul>
+        <p><strong>Stock Return Forecasting with Portfolio Optimization Project</strong> April-May 2024</p>
+        <p>Pattern Recognition 2024 Class Final Project</p>
+        <ul>
+            <li>Developed an Alpha Factor Model for stock return forecasting using Classical ML and LSTM networks.</li>
+            <li>Designed and backtested quantitative trading strategies.</li>
+            <li>Implemented Portfolio Optimization techniques within trading strategies.</li>
+        </ul>
+        <p><strong>Google Data Analytics Professional Certificate</strong> July 2023</p>
+        <p><strong>Participated in Business Case Competition</strong> 2023</p>
+        <ul>
+            <li>Hult Prize at Chulalongkorn - Developed a social enterprise Idea aligned with the UN SDGs.</li>
+            <li>Chulalongkorn Case Discovery x Ascend Money - Formulated a competitive strategy for the TrueMoney financial services application.</li>
+        </ul>
+        <p><strong>MISCELLANEOUS</strong></p>
+        <hr />
+        <p><strong>Technical Skills</strong></p>
+        <p>Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTeX, Markdown</p>
+        <p>Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn</p>
+        <p>Applications: Excel, Tableau, Power BI, Adobe Photoshop & Lightroom, Git, GitHub</p>
+        <p><strong>Language:</strong> Thai (Native), English</p>
+        <p><strong>Interests:</strong> Business, Economics, Politics, Books, History, Philosophy</p>
+    </div>
+</body>
+</html>
