--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     <div class="container">
         <div class="center">
             <p><strong>Pupipat Singkhorn</strong></p>
-            <p>693/120, Indy Condo, Itsaraphap 31 Road, Bangkok, 10600</p>
+            <!-- address -->
             <p>Email: <a href="mailto:pupipat.sk@gmail.com">pupipat.sk@gmail.com</a></p>
+            <!-- phone -->
             <p>
                 <a href="https://www.linkedin.com/in/pupipatsk" target="_blank">LinkedIn</a> |
                 <a href="https://github.com/pupipatsk" target="_blank">GitHub</a>
