--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Frank Ruhl Libre, serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
             line-height: 1.6;
@@ -38,15 +38,21 @@
         a:hover {
             text-decoration: underline;
         }
+        .frank-ruhl-libre-unique {
+            font-family: "Frank Ruhl Libre", serif;
+            font-optical-sizing: auto;
+            font-weight: 400; /* Replace with desired weight (300 to 900) */
+            font-style: normal;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container frank-ruhl-libre-unique">
         <div class="center">
             <p><strong>Pupipat Singkhorn</strong></p>
-            <!-- address -->
+            <p>693/120, Indy Condo, Itsaraphap 31 Road, Bangkok, 10600</p>
             <p>Email: <a href="mailto:pupipat.sk@gmail.com">pupipat.sk@gmail.com</a></p>
-            <!-- phone -->
+            <p>Phone: 082 642 9767</p>
             <p>
                 <a href="https://www.linkedin.com/in/pupipatsk" target="_blank">LinkedIn</a> |
                 <a href="https://github.com/pupipatsk" target="_blank">GitHub</a>
