--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <div class="center">
-<p><span><strong>Pupipat Singkhorn</strong></span><br />
+<p><a href="https://pupipatsk.github.io/Resume/"><strong>Pupipat
+Singkhorn</strong></a><br />
 693/120, Indy Condo, Itsaraphap 31 Road  Bangkok, 10600<br />
 pupipat.sk@gmail.com  082 642 9767  <a
 href="www.linkedin.com/in/pupipatsk"> LinkedIn.com/pupipatsk</a>  <a
@@ -73,15 +74,19 @@ using Classical ML and LSTM networks.</p></li>
 <li><p>Implemented Portfolio Optimization techniques within trading
 strategies.</p></li>
 </ul>
-<p><strong>Google Data Analytics Professional Certificate</strong> July
-2023</p>
 <p><strong>Participated in Business Case Competition</strong> 2023</p>
 <ul>
 <li><p><em>Hult Prize at Chulalongkorn</em> - Developed a social
 enterprise Idea aligned with the UN SDGs.</p></li>
 <li><p><em>Chulalongkorn Case Discovery x Ascend Money</em> - Formulated
-a competitive strategy for the TrueMoney financial services
-application.</p></li>
+a strategy for financial services application.</p></li>
+</ul>
+<p><strong>Certifications</strong></p>
+<ul>
+<li><p><em>Google Data Analytics Professional</em> - Issued by: Google
+via Coursera July 2023</p></li>
+<li><p><em>Financial Engineering and Artificial Intelligence in
+Python</em> - Issued by: Udemy August 2023</p></li>
 </ul>
 <p><strong>MISCELLANEOUS</strong></p>
 <hr />
@@ -89,8 +94,8 @@ application.</p></li>
 Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTex,
 Markdown<br />
 Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib,
-Seaborn<br />
-Applications: Excel, Tableau, Power BI, Adobe Photoshop &amp; Lightroom,
+Seaborn, Plotly<br />
+Applications: Excel, Power BI, Tableau, Adobe Photoshop &amp; Lightroom,
 Git, GitHub</p>
 <p><strong>Language:</strong> Thai (Native), English</p>
 <p><strong>Interests:</strong> Business, Economics, Politics, Books,
