--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,8 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container frank-ruhl-libre-unique">
+
+        <!-- Header Section -->
         <div class="center">
             <p><strong>Pupipat Singkhorn</strong></p>
             <!-- Address -->
@@ -23,29 +27,35 @@
                 <a href="https://github.com/pupipatsk" target="_blank">GitHub</a>
             </p>
         </div>
+
+        <!-- Education Section -->
         <p><strong>EDUCATION</strong></p>
-        <hr />
-        <p><strong>Chulalongkorn University</strong> 2022 - Present</p>
+        <hr /> <!-- Horizontal Line -->
+
+        <p><strong>Chulalongkorn University</strong>&nbsp;&nbsp;2022 - Present</p>
         <p>Bachelor of Engineering - Computer Engineering Major. GPAX: 3.53</p>
         <p>Relevant Coursework: Pattern Recognition, Algorithm Design, Data Structures, Programming Methodology</p>
-        <p><strong>Triam Udom Suksa School</strong> 2019 - 2022</p>
+
+        <p><strong>Triam Udom Suksa School</strong>&nbsp;&nbsp;2019 - 2022</p>
         <p>Science-Mathematics Major. GPAX: 3.85</p>
         <ul>
-            <li>Thailand Physics Olympiad (TPhO) - 19th TPhO: Bronze Medal, 18th TPhO: Participated</li>
-            <li>Triam Udom Photo Club (Staff and Member) - Captured photos at various school events.</li>
+            <li><i>Thailand Physics Olympiad (TPhO)</i> - 19th TPhO: Bronze Medal, 18th TPhO: Participated</li>
+            <li><i>Triam Udom Photo Club (Staff and Member)</i> - Captured photos at various school events.</li>
         </ul>
+
+        <!-- Work Experience Section -->
         <p><strong>WORK EXPERIENCE</strong></p>
-        <hr />
-        <p><strong>Data Scientist Intern</strong> - Kiatnakin Phatra Bank June 2024 - July 2024</p>
+        <hr /> <!-- Horizontal Line -->
+        <p><strong>Data Scientist Intern</strong> - Kiatnakin Phatra Bank,&nbsp;&nbsp;June 2024 - July 2024</p>
         <ul>
-            <li>Used Car Price Forecasting
+            <li><i>Car Price Forecasting</i>
                 <ul>
                     <li>Developed an ensemble machine learning model to predict used car prices, aiding informed automotive loan decisions.</li>
                     <li>Conducted comprehensive data collection and cleaning, integrating car-specific, macro-, and micro-economic factors.</li>
                     <li>Utilized time-series cluster analysis and Bayesian optimization techniques.</li>
                 </ul>
             </li>
-            <li>Loss On Sale Forecasting
+            <li><i>Loss On Sale Forecasting</i>
                 <ul>
                     <li>Created a model to predict loss on sale for Non-Performing Loans (NPLs), reducing uncertainty in credit cost estimation.</li>
                     <li>Utilized credit score, personal data, and credit risk factors to improve model accuracy.</li>
@@ -53,39 +63,47 @@
                 </ul>
             </li>
         </ul>
-        <p><strong>Tutor</strong> - Teach Physics & Mathematics 2022 - Present</p>
+
+        <p><strong>Tutor</strong> - Teach Physics & Mathematics,&nbsp;&nbsp;2022 - Present</p>
         <p>Provided lessons for Physics Olympiad camp, university admissions, and high school preparation.</p>
-        <p><strong>Photographer</strong> - Portfolio: <a href="https://www.instagram.com/pupick.sk" target="_blank">instagram.com/pupick.sk</a> 2019 - Present</p>
+
+        <p><strong>Photographer</strong> - Portfolio: <a href="https://www.instagram.com/pupick.sk" target="_blank">instagram.com/pupick.sk</a>,&nbsp;&nbsp;2019 - Present</p>
         <p>Captured photos at events and private photo sessions.</p>
+
+        <!-- Extracurricular Activities & Achievement Section -->
         <p><strong>EXTRACURRICULAR ACTIVITIES & ACHIEVEMENT</strong></p>
-        <hr />
-        <p><strong>Aihack Thailand 2023 - Ai Hackathon</strong> December 2023</p>
+        <hr /> <!-- Horizontal Line -->
+        <p><strong>Aihack Thailand 2023 - Ai Hackathon</strong>&nbsp;&nbsp;December 2023</p>
         <ul>
             <li>Created a credit risk model using a machine learning approach to forecast individuals who are likely to default.</li>
             <li>Performed data analysis, data pre-processing, and feature engineering using linear and tree-based models.</li>
             <li>Awarded 1st Prize Winner & AUC Prize Winner.</li>
         </ul>
-        <p><strong>Stock Return Forecasting with Portfolio Optimization Project</strong> April-May 2024</p>
+
+        <p><strong>Stock Return Forecasting with Portfolio Optimization Project</strong>&nbsp;&nbsp;April-May 2024</p>
         <p>Pattern Recognition 2024 Class Final Project</p>
         <ul>
             <li>Developed an Alpha Factor Model for stock return forecasting using Classical ML and LSTM networks.</li>
             <li>Designed and backtested quantitative trading strategies.</li>
             <li>Implemented Portfolio Optimization techniques within trading strategies.</li>
         </ul>
-        <p><strong>Google Data Analytics Professional Certificate</strong> July 2023</p>
-        <p><strong>Participated in Business Case Competition</strong> 2023</p>
+
+        <p><strong>Participated in Business Case Competition</strong>&nbsp;&nbsp;2023</p>
         <ul>
-            <li>Hult Prize at Chulalongkorn - Developed a social enterprise Idea aligned with the UN SDGs.</li>
-            <li>Chulalongkorn Case Discovery x Ascend Money - Formulated a competitive strategy for the TrueMoney financial services application.</li>
+            <li><i>Hult Prize at Chulalongkorn</i> - Developed a social enterprise Idea aligned with the UN SDGs.</li>
+            <li><i>Chulalongkorn Case Discovery x Ascend Money</i> - Formulated a competitive strategy for the TrueMoney financial services application.</li>
         </ul>
+
+        <!-- Miscellaneous Section -->
         <p><strong>MISCELLANEOUS</strong></p>
-        <hr />
+        <hr /> <!-- Horizontal Line -->
         <p><strong>Technical Skills</strong></p>
         <p>Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTeX, Markdown</p>
-        <p>Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn</p>
-        <p>Applications: Excel, Tableau, Power BI, Adobe Photoshop & Lightroom, Git, GitHub</p>
+        <p>Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, Plotly</p>
+        <p>Applications: Excel, Power BI, Tableau, Adobe Photoshop & Lightroom, Git, GitHub</p>
         <p><strong>Language:</strong> Thai (Native), English</p>
         <p><strong>Interests:</strong> Business, Economics, Politics, Books, History, Philosophy</p>
     </div>
 </body>
+
 </html>
