--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             <li><i>Chulalongkorn Case Discovery x Ascend Money</i> - Formulated a competitive strategy for the TrueMoney financial services application.</li>
         </ul>
 
+        <p><strong>Certifications</strong></p>
+        <ul>
+            <li><i>Google Data Analytics Professional</i> - Issued by: Google via Coursera,&nbsp;&nbsp;July 2023</li>
+            <li><i>Financial Engineering and Artificial Intelligence in Python</i> - Issued by: Udemy,&nbsp;&nbsp;August 2023</li>
+        </ul>
+
         <!-- Miscellaneous Section -->
         <p><strong>MISCELLANEOUS</strong></p>
         <hr /> <!-- Horizontal Line -->
