--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <hr /> <!-- Horizontal Line -->
         <p><strong>Data Scientist Intern</strong> - Kiatnakin Phatra Bank,&nbsp;&nbsp;June 2024 - July 2024</p>
         <ul>
-            <li><i>Car Price Forecasting</i>
+            <li><i>Used Car Price Forecasting</i>
                 <ul>
                     <li>Developed an ensemble machine learning model to predict used car prices, aiding informed automotive loan decisions.</li>
                     <li>Conducted comprehensive data collection and cleaning, integrating car-specific, macro-, and micro-economic factors.</li>
