--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <hr /> <!-- Horizontal Line -->
 
         <p><strong>Chulalongkorn University</strong>&nbsp;&nbsp;2022 - Present</p>
-        <p>Bachelor of Engineering - Computer Engineering Major. GPAX: 3.53</p>
+        <p>Bachelor of Engineering - Computer Engineering Major.</p>
         <p>Relevant Coursework: Pattern Recognition, Algorithm Design, Data Structures, Programming Methodology</p>
 
         <p><strong>Triam Udom Suksa School</strong>&nbsp;&nbsp;2019 - 2022</p>
@@ -96,7 +96,7 @@
 
         <p><strong>Certifications</strong></p>
         <ul>
-            <li><i>Google Data Analytics Professional</i> - Issued by: Google via Coursera,&nbsp;&nbsp;July 2023</li>
+            <li><i>Google Data Analytics Professional</i> - Issued by: Google,&nbsp;&nbsp;July 2023</li>
             <li><i>Financial Engineering and Artificial Intelligence in Python</i> - Issued by: Udemy,&nbsp;&nbsp;August 2023</li>
         </ul>
 
