--- a/main.html
+++ b/main.html
@@ -9,8 +9,7 @@ href="https://github.com/pupipatsk"> Github.com/pupipatsk</a></p>
 <p><strong>EDUCATION</strong></p>
 <hr />
 <p><strong>Chulalongkorn University</strong> 2022 - Present</p>
-<p>Bachelor of Engineering - Computer Engineering Major. GPAX:
-3.53<br />
+<p>Bachelor of Engineering - Computer Engineering Major.<br />
 Relevant Coursework: Pattern Recognition, Algorithm Design, Data
 Structures, Programming Methodology</p>
 <p><strong>Triam Udom Suksa School</strong> 2019 - 2022<br />
@@ -84,7 +83,7 @@ a strategy for financial services application.</p></li>
 <p><strong>Certifications</strong></p>
 <ul>
 <li><p><em>Google Data Analytics Professional</em> - Issued by: Google
-via Coursera July 2023</p></li>
+July 2023</p></li>
 <li><p><em>Financial Engineering and Artificial Intelligence in
 Python</em> - Issued by: Udemy August 2023</p></li>
 </ul>
