--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <div class="center">
-<p><a href="https://pupipatsk.github.io/Resume/"><strong>Pupipat
-Singkhorn</strong></a><br />
-693/120, Indy Condo, Itsaraphap 31 Road  Bangkok, 10600<br />
-pupipat.sk@gmail.com  082 642 9767  <a
+<p><span><strong>Pupipat Singkhorn</strong></span><br />
+-642-9767  693/120, Indy Condo, Itsaraphap 31 Road, Bangkok 10600<br />
+pupipat.sk@gmail.com  <a
 href="www.linkedin.com/in/pupipatsk"> LinkedIn.com/pupipatsk</a>  <a
-href="https://github.com/pupipatsk"> Github.com/pupipatsk</a></p>
+href="https://github.com/pupipatsk"> Github.com/pupipatsk</a>  <a
+href="https://pupipatsk.github.io/Resume/"> Personal Website</a></p>
 </div>
 <p><strong>EDUCATION</strong></p>
 <hr />
@@ -82,20 +82,21 @@ a strategy for financial services application.</p></li>
 </ul>
 <p><strong>Certifications</strong></p>
 <ul>
+<li><p><em>Machine Learning Specialization</em> - Issued by:
+DeepLearning.AI, Stanford University August 2024</p></li>
 <li><p><em>Google Data Analytics Professional</em> - Issued by: Google
 July 2023</p></li>
 <li><p><em>Financial Engineering and Artificial Intelligence in
-Python</em> - Issued by: Udemy August 2023</p></li>
+Python</em> - Issued by: Udemy August 2024</p></li>
 </ul>
 <p><strong>MISCELLANEOUS</strong></p>
 <hr />
 <p><strong>Technical Skills</strong><br />
-Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTex,
+Programming Language: Python, SQL, C++, C, HTML, CSS, LaTex,
 Markdown<br />
 Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib,
 Seaborn, Plotly<br />
-Applications: Excel, Power BI, Tableau, Adobe Photoshop &amp; Lightroom,
-Git, GitHub</p>
+Applications: Excel, Power BI, Tableau, Git, GitHub</p>
 <p><strong>Language:</strong> Thai (Native), English</p>
 <p><strong>Interests:</strong> Business, Economics, Politics, Books,
 History, Philosophy</p>
