--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
         <p><strong>Certifications</strong></p>
         <ul>
+            <li><i>Machine Learning Specialization</i> - Issued by: DeepLearning.AI, Stanford University,&nbsp;&nbsp;August 2024</li>
             <li><i>Google Data Analytics Professional</i> - Issued by: Google,&nbsp;&nbsp;July 2023</li>
             <li><i>Financial Engineering and Artificial Intelligence in Python</i> - Issued by: Udemy,&nbsp;&nbsp;August 2023</li>
         </ul>
@@ -104,9 +105,9 @@
         <p><strong>MISCELLANEOUS</strong></p>
         <hr /> <!-- Horizontal Line -->
         <p><strong>Technical Skills</strong></p>
-        <p>Programming Language: Python, SQL, R, C++, C, Java, HTML, CSS, LaTeX, Markdown</p>
+        <p>Programming Language: Python, SQL, C++, C, HTML, CSS, LaTex, Markdown</p>
         <p>Programming Libraries: PyTorch, Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn, Plotly</p>
-        <p>Applications: Excel, Power BI, Tableau, Adobe Photoshop & Lightroom, Git, GitHub</p>
+        <p>Applications: Excel, Power BI, Tableau, Git, GitHub</p>
         <p><strong>Language:</strong> Thai (Native), English</p>
         <p><strong>Interests:</strong> Business, Economics, Politics, Books, History, Philosophy</p>
     </div>
