Prohibited Parking Alert System

--- a/index.html
+++ b/index.html
@@ -98,8 +98,17 @@
         <ul>
             <li><i>Machine Learning Specialization</i> - Issued by: DeepLearning.AI, Stanford University,&nbsp;&nbsp;August 2024</li>
             <li><i>Google Data Analytics Professional</i> - Issued by: Google,&nbsp;&nbsp;July 2023</li>
-            <li><i>Financial Engineering and Artificial Intelligence in Python</i> - Issued by: Udemy,&nbsp;&nbsp;August 2023</li>
+            <li><i>Financial Engineering and Artificial Intelligence in Python</i> - Issued by: Udemy,&nbsp;&nbsp;August 2024</li>
         </ul>
+
+        <p><strong>Prohibited Parking Alert System</strong>&nbsp;&nbsp;May 2024</p>
+        <p>Embedded Systems Laboratory 2024 Final Project</p>
+        <ul>
+            <li>Developed a real-time parking alert system using ultrasonic sensors and LDRs interfaced with a microcontroller.</li>
+            <li>Implemented multi-threading and PWM control for a buzzer alert system, with data transmission via UART to a NodeMCU module.</li>
+            <li>Integrated cloud connectivity using NETPIE and Firebase for remote monitoring, with a web interface built using Next.js and React, deployed on Vercel.</li>
+        </ul>
+
 
         <!-- Miscellaneous Section -->
         <p><strong>MISCELLANEOUS</strong></p>
