--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <p><strong>EXTRACURRICULAR ACTIVITIES & ACHIEVEMENT</strong></p>
         <hr /> <!-- Horizontal Line -->
         <p><strong>Aihack Thailand 2023 - Ai Hackathon</strong>&nbsp;&nbsp;December 2023</p>
-        <p>AIFUL Corporation, Japanese consumer finance companies</p>
+        <p>AIFUL Corporation, Japanese consumer finance company</p>
         <ul>
             <li>Created a credit risk model using a machine learning approach to forecast individuals who are likely to default.</li>
             <li>Performed data analysis, data pre-processing, and feature engineering using linear and tree-based models.</li>
